--- a/MauiAndroidKeyboard/MauiAndroidKeyboard.csproj
+++ b/MauiAndroidKeyboard/MauiAndroidKeyboard.csproj
@@ -53,13 +53,15 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Views\HandlerEntryView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\MainView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Handlers\" />
+	  <MauiXaml Update="Views\RendererEntryView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
