--- a/MauiAndroidKeyboard/Platforms/Android/AndroidManifest.xml
+++ b/MauiAndroidKeyboard/Platforms/Android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
-	<application android:allowBackup="true" android:icon="@mipmap/appicon" android:roundIcon="@mipmap/appicon_round" android:supportsRtl="true"></application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.gwise.BarcodeScanner" android:versionCode="1" android:versionName="1.0.0" android:installLocation="auto">
+	<application android:allowBackup="true" android:icon="@mipmap/appicon" android:roundIcon="@mipmap/appicon_round" android:supportsRtl="true" android:label="Barcode Scanner" android:theme="@android:style/Theme.Material.Light"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-sdk android:targetSdkVersion="33" android:minSdkVersion="21" />
