--- a/MauiAndroidKeyboard/Platforms/Android/AndroidManifest.xml
+++ b/MauiAndroidKeyboard/Platforms/Android/AndroidManifest.xml
@@ -1,7 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.gwise.BarcodeScanner" android:versionCode="1" android:versionName="1.0.0" android:installLocation="auto">
-	<application android:allowBackup="true" android:icon="@mipmap/appicon" android:roundIcon="@mipmap/appicon_round" android:supportsRtl="true" android:label="Barcode Scanner" android:theme="@android:style/Theme.Material.Light"></application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.gwise.maui" android:versionCode="1" android:versionName="2022.12.28.1" android:installLocation="auto">
+	<application android:allowBackup="true" android:icon="@mipmap/appicon" android:roundIcon="@mipmap/appicon_round" android:supportsRtl="true" android:label="Maui Keyboard" android:theme="@android:style/Theme.Material.Light" android:usesCleartextTraffic="true">
+		<meta-data android:name="com.google.android.gms.vision.DEPENDENCIES" android:value="barcode" />
+		<provider android:name="androidx.core.content.FileProvider" android:authorities="${applicationId}.fileprovider" android:exported="false" android:grantUriPermissions="true">
+			<meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths" />
+		</provider>
+	</application>
+	<uses-feature android:name="android.hardware.screen.portrait" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="32"/>
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32"/>
 	<uses-sdk android:targetSdkVersion="33" android:minSdkVersion="21" />
 </manifest>
