--- a/MauiAndroidKeyboard/MauiAndroidKeyboard.csproj
+++ b/MauiAndroidKeyboard/MauiAndroidKeyboard.csproj
@@ -105,6 +105,9 @@
 	  <MauiXaml Update="Views\HandlerEntryView3.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\HandlerEntryView4.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\MainView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
