--- a/MauiAndroidKeyboard/MauiAndroidKeyboard.csproj
+++ b/MauiAndroidKeyboard/MauiAndroidKeyboard.csproj
@@ -92,6 +92,8 @@
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
 	  <PackageReference Include="Plugin.Maui.Audio" Version="3.0.0" />
 	  <PackageReference Include="System.Resources.ResourceManager" Version="4.3.0" />
+	  <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.40" />
+	  <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.40" />
 	</ItemGroup>
 
 	<ItemGroup>
